routing and basic navigation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <h1>Diet Logs Revisited</h1>
-<app-customers></app-customers>
-<app-appointments></app-appointments>
+<nav>
+  <a routerLink="/customers">Customers</a>
+  <a routerLink="/appointments">Appointments</a>
+</nav>
+<router-outlet></router-outlet>
+
