--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,3 @@
-<h1>Diet Logs Revisited</h1>
-<nav>
-  <a routerLink="/customers">Customers</a>
-  <a routerLink="/appointments">Appointments</a>
-</nav>
+<app-navbar></app-navbar>
 <router-outlet></router-outlet>
 
