better navbar and dashboard component

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav>
   <ul>
-    <li><strong>Dashboard</strong></li>
+    <li><strong><a routerLink="dashboard">Dashboard</a></strong></li>
   </ul>
   <ul>
     <li><a routerLink="customers">Customers</a></li>
